[refactor] setlists.get(0) → getFirst() (Java 21) + sourceUrl 테스트 추가
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>